[package]
name = "rs-utilities"
version = "0.5.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/neevek/rs-utilities"
description = "Some utilities"
keywords = ["utils", "utilities"]
categories = ["accessibility"]

[dependencies]
log = "0.4"
time = { version = "0.3", features = ["formatting", "local-offset"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "time"] }
atty = "0.2"
hickory-resolver = { version = "0.25", features = ["tls-ring", "system-config", "rustls-platform-verifier"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-platform-verifier = "0.6"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.21", features = ["full"] }

[target.aarch64-linux-android.dependencies]
android_logger = "0.13"

[target.armv7-linux-androideabi.dependencies]
android_logger = "0.13"
